Fix position of target container (fixes issue on Firefox)

--- a/src/stylus/fablevision/target-drake.styl
+++ b/src/stylus/fablevision/target-drake.styl
@@ -1,14 +1,16 @@
 .geniblocks.target-drake-container
   display: flex
   flex-direction: row
-  height: 204px
-  width: 520px
+  height: 195px
+  width: 500px
   background: url('../resources/fablevision/layout-c/target_drake_gizmo.png')
   background-repeat: no-repeat
   background-size: cover
   justify-content: center
   align-self: center
   z-index: 3
+  position:absolute
+  bottom:0px
 
   .target-drake-text
     font-family: 'Yanone Kaffeesatz'
